<resources>
    <string name="app_name">eFinance</string>

    <!-- FEATURE_Login_egp85 -->
    <string name="login_passowrd">Password</string>
    <string name="login_email">Email</string>
    <string name="login_login">Login</string>
    <string name="login_error">Something went wrong! Please check your username and password!</string>
    <string name="register_email">Enter your email</string>
    <string name="register_passowrd">Enter your desired password</string>
    <string name="register_register">Create Account</string>
    <string name="register_title">Please create you account by entering your information below.</string>
    <string name="login_goToRegistration">Create account</string>

    <string name="register_passowrdConfirmation">Enter password again</string>

    <!-- FEATURE_RealtimeDB_egp85 -->
    <string name="financing_name">Name</string>
    <string name="financing_type">Type</string>
    <string name="financing_value">Value</string>
    <string name="financing_firstPaymentDate">First Payment</string>
    <string name="financing_years">Length (years)</string>
    <string name="financing_submit">Submit</string>
    <string name="welcome_newFinancing">Create a new Financing</string>


    <!-- Generic strings -->
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="down_payment">Down Payment</string>
    <string name="taxes">Tax %</string>
    <string name="interestRate">Interest Rate</string>

    <!--MyFinancing strings-->
    <string name="financing_name2">Financing Name:</string>
    <string name="payment_type">Payment Type:</string>
    <string name="payment_value">Payment Value:</string>
    <string name="editFinancing">Edit This Financing</string>
    <string name="saveEditFinancing">Save Edited Financing</string>
    <string name="deleteFinancing">Delete Financing</string>

    <!-- Spinner -->
    <string-array name="createFinancing_spinner">
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
    </string-array>

</resources>