<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".EditFinancing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/txtViewAppName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/financing_name"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:id="@+id/editTextEditName"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="120dp"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:text="@string/financing_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/spinnerEditFinancingType"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="35dp"
            android:entries="@array/createFinancing_spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/financing_value"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:id="@+id/editTextEditFinancingValue"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/financing_years" />

        <EditText
            android:id="@+id/editTextEditFinancingLength"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/down_payment" />

        <EditText
            android:id="@+id/editTextEditDownPayment"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/taxes" />

        <EditText
            android:id="@+id/editTextEditTaxes"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/interestRate" />

        <EditText
            android:id="@+id/editTextEditInterestRate"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <Button
                android:id="@+id/btnEditFinancingSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:text="@string/saveEditFinancing" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>