<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".CreateFinancing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/txtViewAppName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/home" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/financing_name"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:id="@+id/editTextFinancingName"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:text="@string/financing_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Spinner
            android:id="@+id/spinnerFinancingType"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="35dp"
            android:entries="@array/createFinancing_spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/financing_value"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:id="@+id/editTextFinancingValue"
            android:layout_width="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/financing_years" />

        <EditText
            android:id="@+id/editTextFinancingLength"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <Button
            android:id="@+id/btnFinancingSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/financing_submit" />

    </LinearLayout>

</LinearLayout>